# web-api

./: .gitignore  Dockerfile  LICENSE.txt  README.md  api.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-docker-image.yml
np_web_api/: __init__.py  __main__.py  _logging.py  _util.py  app.py  asgi.py  views.py
