[tool.black]
line-length = 120

[tool.poetry]
name = "newpipe-web-api"
version = "0.0.1"
description = "NewPipe web API"
authors = ["Team NewPipe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TeamNewPipe/web-api"
repository = "https://github.com/TeamNewPipe/web-api.git"
packages = [
    { include = "np_web_api" }
]

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^6.0"
cssselect = "*"
# also needed by uvicorn
PyYAML = "^6.0.3"
Quart = "^0.20"
aiohttp = "^3.13"
Flask-Caching = "^2.3"
sentry-sdk = "^2.52"
uvicorn = {extras = ["standard"], version = "^0.40"}
coloredlogs = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
